Uploaded Images and banner with button click

--- a/LearningWebApp220901/LearningWebApp220901.csproj
+++ b/LearningWebApp220901/LearningWebApp220901.csproj
@@ -202,6 +202,59 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Image\Ka.png" />
+    <Content Include="Image\LearnWallpaper.jpg" />
+    <Content Include="Image\NepaliConsonants\1.png" />
+    <Content Include="Image\NepaliConsonants\10.png" />
+    <Content Include="Image\NepaliConsonants\11.png" />
+    <Content Include="Image\NepaliConsonants\12.png" />
+    <Content Include="Image\NepaliConsonants\13.png" />
+    <Content Include="Image\NepaliConsonants\14.png" />
+    <Content Include="Image\NepaliConsonants\15.png" />
+    <Content Include="Image\NepaliConsonants\16.png" />
+    <Content Include="Image\NepaliConsonants\17.png" />
+    <Content Include="Image\NepaliConsonants\18.png" />
+    <Content Include="Image\NepaliConsonants\19.png" />
+    <Content Include="Image\NepaliConsonants\2.png" />
+    <Content Include="Image\NepaliConsonants\20.png" />
+    <Content Include="Image\NepaliConsonants\21.png" />
+    <Content Include="Image\NepaliConsonants\22.png" />
+    <Content Include="Image\NepaliConsonants\23.png" />
+    <Content Include="Image\NepaliConsonants\24.png" />
+    <Content Include="Image\NepaliConsonants\25.png" />
+    <Content Include="Image\NepaliConsonants\26.png" />
+    <Content Include="Image\NepaliConsonants\27.png" />
+    <Content Include="Image\NepaliConsonants\28.png" />
+    <Content Include="Image\NepaliConsonants\29.png" />
+    <Content Include="Image\NepaliConsonants\3.png" />
+    <Content Include="Image\NepaliConsonants\30.png" />
+    <Content Include="Image\NepaliConsonants\31.png" />
+    <Content Include="Image\NepaliConsonants\32.png" />
+    <Content Include="Image\NepaliConsonants\33.png" />
+    <Content Include="Image\NepaliConsonants\34.png" />
+    <Content Include="Image\NepaliConsonants\35.png" />
+    <Content Include="Image\NepaliConsonants\36.png" />
+    <Content Include="Image\NepaliConsonants\4.png" />
+    <Content Include="Image\NepaliConsonants\5.png" />
+    <Content Include="Image\NepaliConsonants\6.png" />
+    <Content Include="Image\NepaliConsonants\7.png" />
+    <Content Include="Image\NepaliConsonants\8.png" />
+    <Content Include="Image\NepaliConsonants\9.png" />
+    <Content Include="Image\NepaliVowels\37.png" />
+    <Content Include="Image\NepaliVowels\38.png" />
+    <Content Include="Image\NepaliVowels\39.png" />
+    <Content Include="Image\NepaliVowels\40.png" />
+    <Content Include="Image\NepaliVowels\41.png" />
+    <Content Include="Image\NepaliVowels\42.png" />
+    <Content Include="Image\NepaliVowels\43.png" />
+    <Content Include="Image\NepaliVowels\44.png" />
+    <Content Include="Image\NepaliVowels\45.png" />
+    <Content Include="Image\NepaliVowels\46.png" />
+    <Content Include="Image\NepaliVowels\47.png" />
+    <Content Include="Image\NepaliVowels\48.png" />
+    <Content Include="Image\NepaliVowels\49.png" />
+    <Content Include="Kids2.jpg" />
+    <Content Include="LearnWallpaper.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
