--- a/LearningWebApp220901/LearningWebApp220901.csproj
+++ b/LearningWebApp220901/LearningWebApp220901.csproj
@@ -202,6 +202,42 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Image\EnglishNumbers\0-3.jpg" />
+    <Content Include="Image\EnglishNumbers\1-3.jpg" />
+    <Content Include="Image\EnglishNumbers\2-3.jpg" />
+    <Content Include="Image\EnglishNumbers\3-3.jpg" />
+    <Content Include="Image\EnglishNumbers\4-3.jpg" />
+    <Content Include="Image\EnglishNumbers\5-3.jpg" />
+    <Content Include="Image\EnglishNumbers\6-3.jpg" />
+    <Content Include="Image\EnglishNumbers\7-3.jpg" />
+    <Content Include="Image\EnglishNumbers\8-3.jpg" />
+    <Content Include="Image\EnglishNumbers\9-3.jpg" />
+    <Content Include="Image\English\61.jpg" />
+    <Content Include="Image\English\62.jpg" />
+    <Content Include="Image\English\63.jpg" />
+    <Content Include="Image\English\64.jpg" />
+    <Content Include="Image\English\65.jpg" />
+    <Content Include="Image\English\66.jpg" />
+    <Content Include="Image\English\67.jpg" />
+    <Content Include="Image\English\68.jpg" />
+    <Content Include="Image\English\69.jpg" />
+    <Content Include="Image\English\70.jpg" />
+    <Content Include="Image\English\71.jpg" />
+    <Content Include="Image\English\72.jpg" />
+    <Content Include="Image\English\73.jpg" />
+    <Content Include="Image\English\74.jpg" />
+    <Content Include="Image\English\75.jpg" />
+    <Content Include="Image\English\76.jpg" />
+    <Content Include="Image\English\77.jpg" />
+    <Content Include="Image\English\78.jpg" />
+    <Content Include="Image\English\79.jpg" />
+    <Content Include="Image\English\80.jpg" />
+    <Content Include="Image\English\81.jpg" />
+    <Content Include="Image\English\82.jpg" />
+    <Content Include="Image\English\83.jpg" />
+    <Content Include="Image\English\84.jpg" />
+    <Content Include="Image\English\85.jpg" />
+    <Content Include="Image\English\86.jpg" />
     <Content Include="Image\Ka.png" />
     <Content Include="Image\LearnWallpaper.jpg" />
     <Content Include="Image\NepaliConsonants\1.png" />
@@ -240,6 +276,16 @@
     <Content Include="Image\NepaliConsonants\7.png" />
     <Content Include="Image\NepaliConsonants\8.png" />
     <Content Include="Image\NepaliConsonants\9.png" />
+    <Content Include="Image\NepaliLetters\50.png" />
+    <Content Include="Image\NepaliLetters\51.png" />
+    <Content Include="Image\NepaliLetters\52.png" />
+    <Content Include="Image\NepaliLetters\53.png" />
+    <Content Include="Image\NepaliLetters\54.png" />
+    <Content Include="Image\NepaliLetters\55.png" />
+    <Content Include="Image\NepaliLetters\56.png" />
+    <Content Include="Image\NepaliLetters\57.png" />
+    <Content Include="Image\NepaliLetters\58.png" />
+    <Content Include="Image\NepaliLetters\59.png" />
     <Content Include="Image\NepaliVowels\37.png" />
     <Content Include="Image\NepaliVowels\38.png" />
     <Content Include="Image\NepaliVowels\39.png" />
